--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -113,7 +113,7 @@
                   <h3 class="balance-text text-success mb-0">UGX {{ "{:,.0f}".format(total_remaining) }}</h3>
                 </div>
                 <div class="icon-box shadow-sm" style="background: rgba(34, 197, 94, 0.1); color: #22c55e">
-                  <i class="bi bi-bank"></i>
+                  <i class="bi bi-cash-stack"></i>
                 </div>
               </div>
             </div>
