Fix: Correct Bootstrap JS bundle path to enable country code dropdown functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -57,6 +57,7 @@
   </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
 <script>
   lucide.createIcons();
@@ -83,7 +84,9 @@
   }
 
   function setCode(code) {
+    // This updates the text on the button itself
     document.getElementById("activeCode").innerText = code;
+    // This updates the hidden input that goes to the server
     document.getElementById("country_code_val").value = code;
   }
 </script>
